[gd_scene load_steps=4 format=2]

[ext_resource path="res://Styles/SmallFontLightTheme.tres" type="Theme" id=1]
[ext_resource path="res://Styles/TinyFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/GameUI/Events2/ModalEvents/ModalEvent.gd" type="Script" id=4]

[node name="ModalEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventPanel" type="Panel" parent="CenterContainer"]
margin_left = 160.0
margin_top = 64.0
margin_right = 480.0
margin_bottom = 256.0
rect_min_size = Vector2( 320, 192 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/EventPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EventPanel/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 184.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="HBoxContainer" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer"]
margin_right = 304.0
size_flags_horizontal = 3

[node name="BodyContainer" type="HBoxContainer" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 304.0
margin_bottom = 157.0
rect_min_size = Vector2( 0, 128 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FooterContainer" type="HBoxContainer" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 304.0
margin_bottom = 176.0
size_flags_horizontal = 3
custom_constants/separation = 16
alignment = 1

[node name="ContinueButton" type="Button" parent="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer"]
margin_left = 127.0
margin_right = 176.0
margin_bottom = 15.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/EventPanel/MarginContainer/VBoxContainer/FooterContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
